# agent-insights

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_insights/: __main__.py  background.py  config.py  db.py  export.py  features.py  ingest.py  llm_judge.py  port_select.py  prescriptions.py  scoring.py  server.py  sessions.py  telemetry.py  version.py
agent_insights/static/: index.html
claude_retro/: __main__.py  background.py  baselines.py  config.py  db.py  export.py  features.py  ingest.py  intents.py  llm_judge.py  port_select.py  prescriptions.py  scoring.py  server.py  sessions.py  skills.py  telemetry.py  version.py
claude_retro/static/: index.html
tests/: conftest.py  test_api.py  test_background.py  test_judge.py  test_sessions.py  test_skills.py
