[project]
name = "agent-insights"
version = "1.2.6"
description = "Deep insights into every AI agent session"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "flask>=2.0.0",
    "sessionlog",
    "claude-relay>=0.2.0",
    "sentry-sdk[flask]>=2.20.0",
]

[project.scripts]
agent-insights = "agent_insights.__main__:main"

[tool.setuptools.packages.find]
include = ["agent_insights*"]

[tool.setuptools.package-data]
agent_insights = ["static/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
sessionlog = { path = "../sessionlog", editable = true }
